Adiciona deteccao e desenho de faces

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Reconhecimento Facial | TCC</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <video
@@ -14,6 +15,7 @@
         height="560"
         muted
     ></video>
+    <script src="./assets/lib/face-api/face-api.min.js"></script>
     <script src="./assets/js/index.js"></script>
 </body>
 </html>
